--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -2,7 +2,7 @@ name: Send Weekly Emails
 
 on:
   schedule:
-    - cron: "0 10 * * 1" # Runs every Monday at 10 AM UTC (adjust as needed)
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
 
 jobs:
   send-emails:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.9"
+          python-version: '3.9'
 
       - name: Install dependencies
         run: pip install pandas smtplib email openpyxl
