--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -1,8 +1,8 @@
-name: Send Weekly Emails
+name: Send Weekly Emails to HRS
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: "*/5 * * * *" # Runs every 5 minutes
 
 jobs:
   send-emails:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: Install dependencies
         run: pip install pandas smtplib email openpyxl
