--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.9"
 
       - name: Install dependencies
-        run: pip install pandas smtplib email openpyxl
+        run: pip install pandas openpyxl # ✅ Removed smtplib & email
 
       - name: Run email script
         env:
