--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -3,7 +3,7 @@ name: Send Weekly Emails to HRS
 on:
   workflow_dispatch: # 👈 Allows manual trigger from GitHub Actions UI
   schedule:
-    - cron: "*/5 * * * *" # Runs every 5 minutes
+    - cron: "30 3 * * 1"  # ✅ Runs every Monday at 9:00 AM IST (3:30 AM UTC)
 
 jobs:
   send-emails:
